--- a/app/src/main/res/drawable/cerclebackgroundgreen.xml
+++ b/app/src/main/res/drawable/cerclebackgroundgreen.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/green"/>
+    <solid android:color="#A095DF"/>
     <size android:width="50dp" android:height="50dp"></size>
+    <gradient
+        android:angle="90"
+
+        android:startColor="@color/deeppurple"
+        android:endColor="#A095DF"/>
 
 </shape>
