--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -5,8 +5,8 @@
             <gradient
                 android:angle="90"
 
-                android:startColor="@color/colorPrimary"
-                android:endColor="@color/colorPrimaryDark"/>
+                android:startColor="@color/deeppurple"
+                android:endColor="#6A5ACD"/>
             <size android:width="50dp" android:height="50dp"></size>
 
         </shape>
