--- a/app/src/main/res/layout/assessment_status_new.xml
+++ b/app/src/main/res/layout/assessment_status_new.xml
@@ -72,7 +72,7 @@
 
     </RelativeLayout>
     <LinearLayout
-        android:layout_marginTop="-50dp"
+        android:layout_marginTop="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="200dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:elevation="10dp"
                 app:cardBackgroundColor="#fcfcfc"
                 app:cardCornerRadius="10dp"
@@ -215,11 +215,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="150dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="35dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:elevation="10dp"
                 app:cardBackgroundColor="#fcfcfc"
                 app:cardCornerRadius="10dp"
@@ -229,7 +229,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/cornered_border_bg"
                     android:layout_margin="0dp"
                     android:elevation="@dimen/_6sdp"
@@ -271,7 +271,7 @@
                         android:layout_height="wrap_content">
                         <androidx.recyclerview.widget.RecyclerView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:id="@+id/recycler"
                             android:scrollbarSize="1dp"
                             android:padding="10dp"
