--- a/app/src/main/res/layout/existing_trade_details_view_new.xml
+++ b/app/src/main/res/layout/existing_trade_details_view_new.xml
@@ -2384,6 +2384,152 @@
 
             </RelativeLayout>
         </RelativeLayout>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/full_details"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.appbar.AppBarLayout
+                android:layout_width="match_parent"
+                app:elevation="0dp"
+                android:translationZ="0.1dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/appBarLayout1"
+                android:background="@drawable/background">
+
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:contentInsetLeft="0dp"
+                    app:contentInsetStart="0dp"
+                    app:layout_scrollFlags="scroll|enterAlways|snap">
+
+                    <RelativeLayout
+                        android:id="@+id/header_layout1"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@drawable/background">
+
+
+                        <ImageView
+                            android:id="@+id/refresh1"
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="start"
+                            android:layout_marginLeft="@dimen/_10sdp"
+                            android:background="@drawable/back"
+                            android:backgroundTint="@android:color/white"
+                            android:onClick="@{()-> activity.previous()}" />
+
+
+                        <TextView
+                            android:id="@+id/title_tv1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:text="Existing Trader Details"
+                            android:textAlignment="center"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_15sdp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/log_out1"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="15dp"
+                            android:adjustViewBounds="true"
+                            android:background="@drawable/ic_home_black_24dp"
+                            android:backgroundTint="@android:color/white"
+                            android:onClick="@{()-> activity.dashboard()}"
+                            android:scaleType="centerInside" />
+
+
+                    </RelativeLayout>
+
+                    <View
+                        android:id="@+id/horizontal_line1"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_below="@+id/header_layout"
+                        android:background="#FFF" />
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <ImageView
+                        android:id="@+id/circle1"
+                        android:layout_width="134dp"
+                        android:layout_height="134dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginTop="@dimen/_125sdp"
+                        android:layout_marginRight="-100dp"
+                        android:src="@drawable/circletransparant" />
+
+                    <ImageView
+                        android:id="@+id/circle2"
+                        android:layout_width="134dp"
+                        android:layout_height="134dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginLeft="-100dp"
+                        android:layout_marginBottom="50dp"
+                        android:src="@drawable/circletransparant" />
+
+                    <ImageView
+                        android:id="@+id/circle3"
+                        android:layout_width="162dp"
+                        android:layout_height="162dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginRight="-80dp"
+                        android:layout_marginBottom="-30dp"
+                        android:src="@drawable/circle" />
+
+                    <ImageView
+                        android:id="@+id/circle4"
+                        android:layout_width="124dp"
+                        android:layout_height="124dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginRight="-50dp"
+                        android:layout_marginBottom="-50dp"
+                        android:layout_toLeftOf="@+id/circle3"
+                        android:src="@drawable/circletransparant" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/trder_details_value"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:scrollbars = "vertical"
+                android:layout_below="@+id/appBarLayout1"></TextView>
+
+
+        </RelativeLayout>
     </RelativeLayout>
 </layout>
 
