--- a/app/src/main/res/layout/existing_trade_licence.xml
+++ b/app/src/main/res/layout/existing_trade_licence.xml
@@ -173,7 +173,7 @@
                             android:layout_marginLeft="@dimen/margin_left_20dp"
                             android:layout_marginTop="@dimen/padding"
                             android:layout_marginRight="@dimen/margin_left_20dp"
-                            android:text="Trader Code"
+                            android:text="Trade Code"
                             android:textColor="@android:color/black"
                             android:textSize="@dimen/_15sdp"
                             android:visibility="visible" />
