--- a/app/src/main/res/layout/field_visit.xml
+++ b/app/src/main/res/layout/field_visit.xml
@@ -10,10 +10,15 @@
             type="com.nic.TPTaxDepartment.activity.FieldVisit" />
     </data>
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <RelativeLayout
         android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:orientation="vertical">
 
 
@@ -21,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp"
+            android:id="@+id/appBarLayout"
             android:translationZ="0.1dp"
             android:background="@android:color/transparent">
 
@@ -66,17 +72,18 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/log_out"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:id="@+id/history"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
                         android:layout_marginRight="15dp"
                         android:adjustViewBounds="true"
-                        android:background="@drawable/ic_home_black_24dp"
+                        android:padding="8dp"
+                        android:background="@drawable/ic_history"
                         android:backgroundTint="@android:color/white"
-                        android:onClick="@{()-> activity.dashboard()}"
+                        android:onClick="@{()-> activity.loadHistory()}"
                         android:scaleType="centerInside" />
 
 
@@ -145,6 +152,7 @@
 
         <androidx.core.widget.NestedScrollView
             android:id="@+id/scroll_view"
+            android:layout_below="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
@@ -699,5 +707,81 @@
         </androidx.core.widget.NestedScrollView>
 
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:id="@+id/historyLayout">
+            <RelativeLayout
+                android:id="@+id/header_layout2"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@drawable/gradiant_bg">
+
+                <ImageView
+                    android:id="@+id/refresh2"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="start"
+                    android:layout_centerVertical="true"
+                    android:onClick="@{()-> activity.onBackPressed()}"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:background="@drawable/back"
+                    android:backgroundTint="@android:color/white" />
+
+
+                <TextView
+                    android:id="@+id/title_tv2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="Field Visit List"
+                    android:textAlignment="center"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id = "@+id/swipeRefresh"
+                android:layout_below="@+id/header_layout2"
+                android:layout_width = "match_parent"
+                android:layout_height = "match_parent">
+                <se.emilsjolander.stickylistheaders.StickyListHeadersListView
+                    android:id="@+id/stickyList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="2dp"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:id="@+id/no_data_found_layout">
+
+                <ImageView
+                    android:layout_width="250dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/no_data_ic"
+                    android:scaleType="centerCrop"
+                    android:id="@+id/no_data_img"></ImageView>
+
+                <TextView
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Data Found"
+                    android:layout_below="@+id/no_data_img"
+                    android:layout_centerHorizontal="true"></TextView>
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
 </layout>
