--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -2215,6 +2215,19 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/header2_layout"
                 android:id="@+id/pdfView"/>
+            <TextView
+                android:id="@+id/pageNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:text="0"
+                android:layout_marginBottom="50dp"
+                android:textAlignment="center"
+                android:textColor="@color/grey2"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+
         </RelativeLayout>
 
     </RelativeLayout>
