Design Changes and Added API integration to get existing trader image & document and anso to get  field visit image.

--- a/app/src/main/res/layout/login_screen.xml
+++ b/app/src/main/res/layout/login_screen.xml
@@ -75,7 +75,7 @@ xmlns:customfontdemo="http://schemas.android.com/tools">
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:padding="3dp"
-                android:text="TpTax Department"
+                android:text="@string/app_name_line"
                 android:textColor="@color/grey2"
                 android:textSize="17sp"
                 android:textStyle="bold"
