--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,61 +1,171 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<layout>
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:customfontdemo="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="activity"
             type="com.nic.TPTaxDepartment.activity.SplashScreen" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/ivSplash"
+        android:layout_height="match_parent"
+        >
+        <RelativeLayout
+            android:visibility="visible"
             android:layout_width="match_parent"
-            android:background="@drawable/background"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/ivLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="100dp"
-            android:text="TPTAX"
-            android:textColor="#FFF"
-            android:textSize="44sp"
-              />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
-        <TextView
-            android:id="@+id/ivSubtitle"
-            android:lineSpacingExtra="8dp"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="28dp"
-            android:layout_centerInParent="true"
-            android:text="Try a new experience of Online Tax"
-            android:textColor="#FFF"
-            android:textSize="22sp"
-             />
+                <ImageView
+                    android:id="@+id/circle1"
+                    android:layout_width="134dp"
+                    android:layout_height="134dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/_125sdp"
+                    android:layout_marginRight="-100dp"
+                    android:src="@drawable/circletransparant" />
 
-        <TextView
-            android:id="@+id/ivBtn"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="108dp"
-            android:layout_marginStart="36dp"
-            android:layout_alignParentBottom="true"
-            android:lineSpacingExtra="8dp"
-            android:text="Get Started"
-            android:textColor="#FFF"
-            android:textSize="24sp"
-             />
+                <ImageView
+                    android:id="@+id/circle2"
+                    android:layout_width="134dp"
+                    android:layout_height="134dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="-100dp"
+                    android:layout_marginBottom="50dp"
+                    android:src="@drawable/circletransparant" />
+
+
+                <ImageView
+                    android:id="@+id/circle4"
+                    android:layout_width="124dp"
+                    android:layout_height="124dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="-50dp"
+                    android:layout_marginBottom="-50dp"
+                    android:src="@drawable/circletransparant" />
+
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical"
+                >
+
+
+                <ImageView
+                    android:id="@+id/ivIlls"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="30dp"
+                    android:src="@mipmap/tamilnadu_logo" />
+
+                <TextView
+                    android:layout_below="@+id/ivIlls"
+                    android:id="@+id/rd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:padding="3dp"
+                    android:text="@string/app_name_line"
+                    android:textColor="@color/grey2"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    customfontdemo:fontName="@string/font_circular_medium" />
+
+                <TextView
+                    android:id="@+id/and"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rural"
+                    android:layout_centerInParent="true"
+                    android:padding="3dp"
+                    android:visibility="gone"
+                    android:text=" &amp;"
+                    android:textColor="@android:color/black"
+                    android:textSize="17sp"
+                    android:textStyle="bold"
+                    customfontdemo:fontName="@string/font_circular_medium" />
+
+
+            </RelativeLayout>
 
     </RelativeLayout>
 </layout>
+
+    <!--
+    <?xml version="1.0" encoding="UTF-8"?>
+    <layout>
+
+        <data>
+
+            <variable
+                name="activity"
+                type="com.nic.TPTaxDepartment.activity.SplashScreen" />
+        </data>
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/ivSplash"
+                android:layout_width="match_parent"
+                android:background="@drawable/background"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/ivLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="100dp"
+                android:text="@string/app_name"
+                android:textColor="#FFF"
+                android:textSize="35sp"
+                  />
+
+
+            <TextView
+                android:id="@+id/ivSubtitle"
+                android:lineSpacingExtra="8dp"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="28dp"
+                android:layout_centerInParent="true"
+                android:text="Try a new experience of Online Tax"
+                android:textColor="#FFF"
+                android:textSize="22sp"
+                 />
+
+            <TextView
+                android:id="@+id/ivBtn"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="108dp"
+                android:layout_marginStart="36dp"
+                android:layout_alignParentBottom="true"
+                android:lineSpacingExtra="8dp"
+                android:text="Get Started"
+                android:textColor="#FFF"
+                android:textSize="24sp"
+                 />
+
+        </RelativeLayout>
+    </layout>-->
